<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/thiruvalluvar" android:title="@string/thiruvalluvar"/>
        <item android:id="@+id/chapter_1" android:title="@string/chapter_1"/>
        <item android:id="@+id/chapter_2" android:title="@string/chapter_2"/>
        <item android:id="@+id/chapter_3" android:title="@string/chapter_3"/>
        <item android:id="@+id/chapter_4" android:title="@string/chapter_4"/>
        <item android:id="@+id/chapter_5" android:title="@string/chapter_5"/>
        <item android:id="@+id/chapter_6" android:title="@string/chapter_6"/>
        <item android:id="@+id/chapter_7" android:title="@string/chapter_7"/>
        <item android:id="@+id/chapter_8" android:title="@string/chapter_8"/>
        <item android:id="@+id/chapter_9" android:title="@string/chapter_9"/>
        <item android:id="@+id/chapter_10" android:title="@string/chapter_10"/>
        <item android:id="@+id/chapter_11" android:title="@string/chapter_11"/>
        <item android:id="@+id/chapter_12" android:title="@string/chapter_12"/>
        <item android:id="@+id/chapter_13" android:title="@string/chapter_13"/>
        <item android:id="@+id/chapter_14" android:title="@string/chapter_14"/>
        <item android:id="@+id/chapter_15" android:title="@string/chapter_15"/>
        <item android:id="@+id/chapter_16" android:title="@string/chapter_16"/>
        <item android:id="@+id/chapter_17" android:title="@string/chapter_17"/>
        <item android:id="@+id/chapter_18" android:title="@string/chapter_18"/>
        <item android:id="@+id/chapter_19" android:title="@string/chapter_19"/>
        <item android:id="@+id/chapter_20" android:title="@string/chapter_20"/>
        <item android:id="@+id/chapter_21" android:title="@string/chapter_21"/>
        <item android:id="@+id/chapter_22" android:title="@string/chapter_22"/>
        <item android:id="@+id/chapter_23" android:title="@string/chapter_23"/>
        <item android:id="@+id/chapter_24" android:title="@string/chapter_24"/>
        <item android:id="@+id/chapter_25" android:title="@string/chapter_25"/>
        <item android:id="@+id/chapter_26" android:title="@string/chapter_26"/>
        <item android:id="@+id/chapter_27" android:title="@string/chapter_27"/>
        <item android:id="@+id/chapter_28" android:title="@string/chapter_28"/>
        <item android:id="@+id/chapter_29" android:title="@string/chapter_29"/>
        <item android:id="@+id/chapter_30" android:title="@string/chapter_30"/>
        <item android:id="@+id/chapter_31" android:title="@string/chapter_31"/>
        <item android:id="@+id/chapter_32" android:title="@string/chapter_32"/>
        <item android:id="@+id/chapter_33" android:title="@string/chapter_33"/>
        <item android:id="@+id/chapter_34" android:title="@string/chapter_34"/>
        <item android:id="@+id/chapter_35" android:title="@string/chapter_35"/>
        <item android:id="@+id/chapter_36" android:title="@string/chapter_36"/>
        <item android:id="@+id/chapter_37" android:title="@string/chapter_37"/>
        <item android:id="@+id/chapter_38" android:title="@string/chapter_38"/>
        <item android:id="@+id/chapter_39" android:title="@string/chapter_39"/>
        <item android:id="@+id/chapter_40" android:title="@string/chapter_40"/>
        <item android:id="@+id/chapter_41" android:title="@string/chapter_41"/>
        <item android:id="@+id/chapter_42" android:title="@string/chapter_42"/>
        <item android:id="@+id/chapter_43" android:title="@string/chapter_43"/>
        <item android:id="@+id/chapter_44" android:title="@string/chapter_44"/>
        <item android:id="@+id/chapter_45" android:title="@string/chapter_45"/>
        <item android:id="@+id/chapter_46" android:title="@string/chapter_46"/>
        <item android:id="@+id/chapter_47" android:title="@string/chapter_47"/>
        <item android:id="@+id/chapter_48" android:title="@string/chapter_48"/>
        <item android:id="@+id/chapter_49" android:title="@string/chapter_49"/>
        <item android:id="@+id/chapter_50" android:title="@string/chapter_50"/>
        <item android:id="@+id/chapter_51" android:title="@string/chapter_51"/>
        <item android:id="@+id/chapter_52" android:title="@string/chapter_52"/>
        <item android:id="@+id/chapter_53" android:title="@string/chapter_53"/>
        <item android:id="@+id/chapter_54" android:title="@string/chapter_54"/>
        <item android:id="@+id/chapter_55" android:title="@string/chapter_55"/>
        <item android:id="@+id/chapter_56" android:title="@string/chapter_56"/>
        <item android:id="@+id/chapter_57" android:title="@string/chapter_57"/>
        <item android:id="@+id/chapter_58" android:title="@string/chapter_58"/>
        <item android:id="@+id/chapter_59" android:title="@string/chapter_59"/>
        <item android:id="@+id/chapter_60" android:title="@string/chapter_60"/>
        <item android:id="@+id/chapter_61" android:title="@string/chapter_61"/>
        <item android:id="@+id/chapter_62" android:title="@string/chapter_62"/>
        <item android:id="@+id/chapter_63" android:title="@string/chapter_63"/>
        <item android:id="@+id/chapter_64" android:title="@string/chapter_64"/>
        <item android:id="@+id/chapter_65" android:title="@string/chapter_65"/>
        <item android:id="@+id/chapter_66" android:title="@string/chapter_66"/>
        <item android:id="@+id/chapter_67" android:title="@string/chapter_67"/>
        <item android:id="@+id/chapter_68" android:title="@string/chapter_68"/>
        <item android:id="@+id/chapter_69" android:title="@string/chapter_69"/>
        <item android:id="@+id/chapter_70" android:title="@string/chapter_70"/>
        <item android:id="@+id/chapter_71" android:title="@string/chapter_71"/>
        <item android:id="@+id/chapter_72" android:title="@string/chapter_72"/>
        <item android:id="@+id/chapter_73" android:title="@string/chapter_73"/>
        <item android:id="@+id/chapter_74" android:title="@string/chapter_74"/>
        <item android:id="@+id/chapter_75" android:title="@string/chapter_75"/>
        <item android:id="@+id/chapter_76" android:title="@string/chapter_76"/>
        <item android:id="@+id/chapter_77" android:title="@string/chapter_77"/>
        <item android:id="@+id/chapter_78" android:title="@string/chapter_78"/>
        <item android:id="@+id/chapter_79" android:title="@string/chapter_79"/>
        <item android:id="@+id/chapter_80" android:title="@string/chapter_80"/>
        <item android:id="@+id/chapter_81" android:title="@string/chapter_81"/>
        <item android:id="@+id/chapter_82" android:title="@string/chapter_82"/>
        <item android:id="@+id/chapter_83" android:title="@string/chapter_83"/>
        <item android:id="@+id/chapter_84" android:title="@string/chapter_84"/>
        <item android:id="@+id/chapter_85" android:title="@string/chapter_85"/>
        <item android:id="@+id/chapter_86" android:title="@string/chapter_86"/>
        <item android:id="@+id/chapter_87" android:title="@string/chapter_87"/>
        <item android:id="@+id/chapter_88" android:title="@string/chapter_88"/>
        <item android:id="@+id/chapter_89" android:title="@string/chapter_89"/>
        <item android:id="@+id/chapter_90" android:title="@string/chapter_90"/>
        <item android:id="@+id/chapter_91" android:title="@string/chapter_91"/>
        <item android:id="@+id/chapter_92" android:title="@string/chapter_92"/>
        <item android:id="@+id/chapter_93" android:title="@string/chapter_93"/>
        <item android:id="@+id/chapter_94" android:title="@string/chapter_94"/>
        <item android:id="@+id/chapter_95" android:title="@string/chapter_95"/>
        <item android:id="@+id/chapter_96" android:title="@string/chapter_96"/>
        <item android:id="@+id/chapter_97" android:title="@string/chapter_97"/>
        <item android:id="@+id/chapter_98" android:title="@string/chapter_98"/>
        <item android:id="@+id/chapter_99" android:title="@string/chapter_99"/>
        <item android:id="@+id/chapter_100" android:title="@string/chapter_100"/>
        <item android:id="@+id/chapter_101" android:title="@string/chapter_101"/>
        <item android:id="@+id/chapter_102" android:title="@string/chapter_102"/>
        <item android:id="@+id/chapter_103" android:title="@string/chapter_103"/>
        <item android:id="@+id/chapter_104" android:title="@string/chapter_104"/>
        <item android:id="@+id/chapter_105" android:title="@string/chapter_105"/>
        <item android:id="@+id/chapter_106" android:title="@string/chapter_106"/>
        <item android:id="@+id/chapter_107" android:title="@string/chapter_107"/>
        <item android:id="@+id/chapter_108" android:title="@string/chapter_108"/>
        <item android:id="@+id/chapter_109" android:title="@string/chapter_109"/>
        <item android:id="@+id/chapter_110" android:title="@string/chapter_110"/>
        <item android:id="@+id/chapter_111" android:title="@string/chapter_111"/>
        <item android:id="@+id/chapter_112" android:title="@string/chapter_112"/>
        <item android:id="@+id/chapter_113" android:title="@string/chapter_113"/>
        <item android:id="@+id/chapter_114" android:title="@string/chapter_114"/>
        <item android:id="@+id/chapter_115" android:title="@string/chapter_115"/>
        <item android:id="@+id/chapter_116" android:title="@string/chapter_116"/>
        <item android:id="@+id/chapter_117" android:title="@string/chapter_117"/>
        <item android:id="@+id/chapter_118" android:title="@string/chapter_118"/>
        <item android:id="@+id/chapter_119" android:title="@string/chapter_119"/>
        <item android:id="@+id/chapter_120" android:title="@string/chapter_120"/>
        <item android:id="@+id/chapter_121" android:title="@string/chapter_121"/>
        <item android:id="@+id/chapter_122" android:title="@string/chapter_122"/>
        <item android:id="@+id/chapter_123" android:title="@string/chapter_123"/>
        <item android:id="@+id/chapter_124" android:title="@string/chapter_124"/>
        <item android:id="@+id/chapter_125" android:title="@string/chapter_125"/>
        <item android:id="@+id/chapter_126" android:title="@string/chapter_126"/>
        <item android:id="@+id/chapter_127" android:title="@string/chapter_127"/>
        <item android:id="@+id/chapter_128" android:title="@string/chapter_128"/>
        <item android:id="@+id/chapter_129" android:title="@string/chapter_129"/>
        <item android:id="@+id/chapter_130" android:title="@string/chapter_130"/>
        <item android:id="@+id/chapter_131" android:title="@string/chapter_131"/>
        <item android:id="@+id/chapter_132" android:title="@string/chapter_132"/>
        <item android:id="@+id/chapter_133" android:title="@string/chapter_133"/>
    </group>


</menu>